--- a/config_sample.env
+++ b/config_sample.env
@@ -1,17 +1,15 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "8179248715:AAFnQ2X6BpIRFV62sIcFjcSTlczE93k3XLg"                              # Require restart after changing it while bot running
+OWNER_ID = "1955406483"                               # Require restart after changing it while bot running
+TELEGRAM_API = "25331263"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "cab85305bf85125a2ac053210bcd1030"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://rs92573993688:pVf4EeDuRi2o92ex@cluster0.9u29q.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
-CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
+CMD_SUFFIX = "/"                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1003487393432"                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
@@ -22,11 +20,11 @@ INCOMPLETE_TASK_NOTIFIER = "False"
 SET_COMMANDS = "False"
 EXTENSION_FILTER = ""
 YT_DLP_OPTIONS = ""
-FSUB_IDS = ""
-BOT_PM = ""
+FSUB_IDS = "-1002888391802"
+BOT_PM = "True"
 
 # GDrive Tools
-GDRIVE_ID = ""
+GDRIVE_ID = "1hDHjkZqbLa5waM7OEPs5tHwlphoRL_4f"
 USER_TD_MODE = ""
 USER_TD_SA = ""
 INDEX_URL = ""
@@ -71,9 +69,9 @@ MIRROR_FILENAME_SUFFIX = ""
 MIRROR_FILENAME_REMNAME = ""
 
 # Log Channel/SuperGroup (Topics Support)
-LEECH_LOG_ID = ""
-MIRROR_LOG_ID = ""
-LINKS_LOG_ID = ""
+LEECH_LOG_ID = "-1003450984984"
+MIRROR_LOG_ID = "-1003328356941"
+LINKS_LOG_ID = "-1002770315169"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
@@ -88,15 +86,15 @@ QUEUE_UPLOAD = ""
 
 # RSS
 RSS_DELAY = "600"
-RSS_CHAT = ""
+RSS_CHAT = "-1002828142957"
 
 # Mega
-MEGA_EMAIL = ""
-MEGA_PASSWORD = ""
+MEGA_EMAIL = "beniwaljass279@gmail.com"
+MEGA_PASSWORD = "jassbeniwal2005"
 
 # Limits
-DAILY_TASK_LIMIT = ""
-DAILY_MIRROR_LIMIT = ""
+DAILY_TASK_LIMIT = "10"
+DAILY_MIRROR_LIMIT = "10"
 DAILY_LEECH_LIMIT = ""
 USER_MAX_TASKS = ""
 BOT_MAX_TASKS = ""
@@ -119,7 +117,7 @@ MDL_TEMPLATE = ""
 # Telegraph
 TITLE_NAME = "WZ-M/L-X"
 AUTHOR_NAME = "WZML-X"
-AUTHOR_URL = "https://t.me/WZML_X"
+AUTHOR_URL = "https://t.me/allbotsupdates1"
 COVER_IMAGE = ""
 
 # Extra
@@ -142,7 +140,7 @@ SOURCE_LINK = "False"
 
 # Token system
 TOKEN_TIMEOUT = ""
-LOGIN_PASS = ""
+LOGIN_PASS = "jass2121"
 
 # Torrent Search
 SEARCH_API_LINK = ""
